Fix scrollbar-width and item heights in Firefox.

--- a/static/application.css
+++ b/static/application.css
@@ -6,7 +6,7 @@
 	margin: 0;
 	padding: 0;
 	scroll-behavior: smooth;
-	scrollbar-width: 0;
+	scrollbar-width: none;
 }
 
 ::-webkit-scrollbar {
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
     background: #28282B;
 	height: fit-content;
+	max-height: max-content;
 	min-height: 100%;
 }
 
@@ -48,8 +49,8 @@ textarea {
 
 .content {
 	padding: 20px 50px;
-	height: 100%;
-	min-height: 100%;
+	height: fit-content;
+	min-height: max-content;
 }
 
 .line-nums {
@@ -69,8 +70,8 @@ textarea {
 	padding: 0px;
 	margin: 0px;
 	width: 100%;
-	height: 100%;
-	max-height: 100%;
+	height: fit-content;
+	max-height: max-content;
 	border: 0px;
 	outline: none;
 	font-size: 15px;
